<resources>
    <string name="app_name">Pathik</string>
    <string name="title_activity_maps">Map</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_from_here">Sign Up from here</string>
    <string name="let_s_sign_you_in">Let\'s sign you in.</string>
    <string name="welcome_back_nyou_ve_been_missed">Welcome back.\nYou\'ve been missed!</string>
    <string name="welcome_title">Welcome to Pathik</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_subtitle">Bring your loved ones together, share your locations while travelling. Get rewards on using Pathik.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="let_s_sign_you_up">Let\'s sign you up.</string>
    <string name="name">Full name</string>
    <string name="already_a_member">Already a member?</string>
    <string name="forget_password_title">Let\'s recover your password.</string>
    <string name="forget_password_subtitle">We will send you a password recovery email.</string>
    <string name="get_recovery_email">Get Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_login_credential_malformed_or_expired">Invalid Credentials !! Please enter correct password</string>
    <string name="error_login_invalid_email">Invalid Credential !! Please enter correct email</string>

    <string name="error_login_email_already_in_use">The email address is already in use by another account.</string>
    <string name="error_login_user_disabled">Your account has been disabled by the administrator.</string>
    <string name="error_login_user_not_found">No account exist with this email</string>
    <string name="error_login_operation_not_allowed">This operation is not allowed. You must enable this service in the console.</string>
    <string name="error_login_password_is_weak">The given password is invalid.</string>
    <string name="error_login_user_token_expired">The user\'s credential is no longer valid. The user must sign in again</string>
    <string name="error_login_invalid_user_token">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="common_auth_error">An error occurred, please try again later</string>
    <string name="logging_in">Logging in …</string>
    <string name="error_network_exception">A network error has been occurred, please check your internet connection</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="an_error_occur">An error occurred, please try again later</string>
    <string name="sending_recovery_email">Sending recovery email …</string>
    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="recovery_email_sent">Recovery email sent, please login again</string>
    <string name="signing_up">Signing Up …</string>
    <string name="setting">Setting</string>
    <string name="payment">Payment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="location_permission_rational">Location permission is required to run this app</string>
    <string name="permission_rational">%1$S permission is required to run this app</string>
    <string name="welcome_back">Welcome back, %1$S!!</string>
    <string name="save">Save</string>
    <string name="about">About Us</string>
    <string name="profile">Profile</string>
    <string name="my_trip">My Trips</string>
    <string name="fab_content_desc">My Location</string>
    <string name="ok">Ok</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Gps required to show current location, please enable locations in settings.</string>
    <string name="enable_now">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="permission_required">Permission Required</string>
    <string name="no_thanks">No thanks!!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="my_trips">My Trips</string>
    <string name="menu_profile_content_description">Profile</string>
    <string name="menu_my_trip_content_description">My Trips</string>
    <string name="menu_payment_content_description">Payment</string>
    <string name="menu_settings_content_description">Settings</string>
    <string name="wallet">Wallets</string>
    <string name="card">Credit/Debit Card</string>
    <string name="add_card">Add Card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="link">Link</string>
    <string name="check_balance">Check Balance</string>
    <string name="upi">UPI</string>
    <string name="add_credi_card">Add Card</string>
    <string name="refresh">Refresh</string>
    <string name="lbl_set_profile_photo">Set Profile Picture</string>
    <string name="lbl_take_camera_picture">Take from Camera</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="app_settings">App Settings</string>
    <string name="support">Support</string>
    <string name="build_version">1.2.31</string>
    <string name="getting_location">Getting Location …</string>
    <string name="unable_to_share">Unable to share location</string>
    <string name="share_via">Share via</string>
    <string name="share_body">Here is my pathik location </string>
    <string name="ask_again">Ask Again!!</string>
    <string name="configure_permission_in_app_settings">%1$S permission is required, configure the permission in App Settings</string>
    <string name="open_settings">Open Settings</string>
    <string name="updating_user_profile">Updating profile …</string>
    <string name="pref_key_logout">pref_key_logout</string>

</resources>